@@ -1,3 +1,10 @@
+[b]Version 0.8.3[/b]:
+
+(2012-11-28)
+ * Show the mouse cursor immediately when the mouse is moved on the video
+   area.
+
+
 [b]Version 0.8.2[/b]:
 
 (2012-11-15)
